--- a/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework.csproj
+++ b/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Tools_XNA_dotNET_Framework</RootNamespace>
     <AssemblyName>Tools_XNA_dotNET_Framework</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -49,8 +50,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="ArrayDimensionHelper.cs" />
+    <Compile Include="Camera2D.cs" />
+    <Compile Include="CollidableObject.cs" />
+    <Compile Include="ColorHelper.cs" />
+    <Compile Include="ExtendedSpriteBatch.cs" />
+    <Compile Include="Primitives2D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RectangleCollisionHelper.cs" />
+    <Compile Include="SplitScreenHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
