--- a/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework.csproj
+++ b/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework.csproj
@@ -54,7 +54,9 @@
     <Compile Include="Camera2D.cs" />
     <Compile Include="CollidableObject.cs" />
     <Compile Include="ColorHelper.cs" />
+    <Compile Include="DynamicCompiling.cs" />
     <Compile Include="ExtendedSpriteBatch.cs" />
+    <Compile Include="MathHelperExtensions.cs" />
     <Compile Include="Primitives2D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectangleCollisionHelper.cs" />
