--- a/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework.csproj
+++ b/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework.csproj
@@ -42,6 +42,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayDimensionHelper.cs" />
+    <Compile Include="ByteSerializer.cs" />
     <Compile Include="Camera2D.cs" />
     <Compile Include="CollidableObject.cs" />
     <Compile Include="ColorHelper.cs" />
