--- a/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework.csproj
+++ b/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework/Tools_XNA_dotNET_Framework.csproj
@@ -59,6 +59,7 @@
     <Compile Include="DynamicCompiling.cs" />
     <Compile Include="ExtendedSpriteBatch.cs" />
     <Compile Include="MathHelperExtensions.cs" />
+    <Compile Include="NetworkHelper.cs" />
     <Compile Include="Primitives2D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectangleCollisionHelper.cs" />
